# CP1GroupProject

./: CMakeLists.txt  DESCRIPTION.md  output_1.txt
data/students/: output_1.txt
src/: main.c
tests/: test_load_student_data.cxx
